<resources>
    <string name="app_name">Kill zombis</string>
    <string name="btnlogin">Iniciar sesión</string>
    <string name="btnregistro">Crear cuenta nueva</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="correo">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="pais">Pais</string>
    <string name="fechaText">Fecha</string>
    <string name="registrarte">Registrarte</string>

    <!--ACTIVIDAD LOGIN-->
    <string name="correoLogin">Correo electrónico</string>
    <string name="passLogin">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>

    <!--MENU-->
    <string name="MiPerfil">Mi Perfil</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="MiPuntuaciontxt">Mi Puntuación</string>
    <string name="Zombies"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo1"> -- </string>
    <string name="nombre1"> -- </string>
    <string name="edad1"> -- </string>
    <string name="pais1"> -- </string>

    <string name="Menutxt">Menú</string>
    <string name="JugarBtn">Jugar</string>
    <string name="EditarBtn">Editar</string>
    <string name="CambiarPassBtn">Cambiar clave</string>
    <string name="PuntuacionesBtn">Puntuaciones</string>
    <string name="AcercaDeBtn">Acerca de</string>

    <!---ESCENARIO-->
    <string name="TvContador">0 </string>
    <string name="TvNombre">----</string>
    <string name="Tvtiempo">0 s</string>

    <!--PANTALLA-->
    <string name="AnchoTv">--</string>
    <string name="AltoTv">--</string>

    <!--GAMEOVER-->
    <string name="SeacaboTXT">!Se acabó el tiempo;</string>
    <string name="HasmatadoTXT">Has Matado</string>
    <string name="NumeroTXT"> -- </string>
    <string name="JUEGARDENUEVO">JUGAR DE NUEVO</string>
    <string name="IRMENU" >MENÚ</string>
    <string name="PUNTAJES">VER Puntajes</string>

</resources>