<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d0d17"
    tools:context=".Menu">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/MiPuntuaciontxt"
            android:text="@string/MiPuntuaciontxt"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/Zombies"
            android:text="@string/Zombies"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagen"
            android:background="@drawable/zombie2"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/uid"
            android:text="@string/uid"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/correo"
            android:text="@string/correo"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/Menutxt"
            android:text="@string/Menutxt"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/Jugarbtn"
            android:text="@string/JugarBtn"
            android:background="@drawable/boton_personalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/AcercaDeBtn"
            android:background="@drawable/boton_personalizado"
            android:text="@string/AcercaDeBtn"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/PuntuacionesBtn"
            android:background="@drawable/boton_personalizado"
            android:text="@string/PuntuacionesBtn"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/CerrarSesion"
            android:background="@drawable/boton_personalizado"
            android:text="@string/CerrarSesion"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>