<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="700dp"
    android:layout_gravity="center"
    android:background="@color/material_dynamic_tertiary20"
    android:gravity="center">
     <TextView
         android:id="@+id/SeacaboTXT"
    android:text="@string/SeacaboTXT"
    android:gravity="center"
         android:textSize="25dp"
    android:layout_width="match_parent"
         android:textColor="@color/white"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/HasmatadoTXT"
        android:text="@string/HasmatadoTXT"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/NumeroTXT"
        android:text="@string/NumeroTXT"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--ANIMACIÓN-->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="finjuego.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />
    <Button
        android:id="@+id/JUEGARDENUEVO"
        android:background="@drawable/boton_personalizado"
        android:text="@string/JUEGARDENUEVO"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
    android:id="@+id/IRMENU"
    android:text="@string/IRMENU"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_personalizado"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/PUNTAJES"
        android:layout_marginTop="5dp"
        android:text="@string/PUNTAJES"
        android:background="@drawable/boton_personalizado"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"/>



</androidx.appcompat.widget.LinearLayoutCompat>
