<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".EscenarioJuego">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--X & Y-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--X-->
                <TextView
                    android:id="@+id/AnchoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AnchoTv"></TextView>
                <!--Y-->
                <TextView
                    android:id="@+id/AltoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AltoTv"></TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/aplastados" />

            <TextView
                android:id="@+id/TvContador"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TvContador" />

            <TextView
                android:id="@+id/TvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvNombre" />
            <!--ANIMACIÓN-->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tiempo.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />
            <TextView
                android:id="@+id/Tvtiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tvtiempo" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IvZombie"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/zombie2" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>